ci(jpackage): the images carry the module the pinning diagnostic needs
JfrPinningSource imports jdk.jfr.consumer, and neither --add-modules list named
jdk.jfr: the eleven roots resolve to a 31-module closure that does not contain
it, measured with java --describe-module on JDK 25.0.4. RuntimePools:141-147
constructs JfrPinningSource with no try/catch and no availability probe, and its
constructor immediately opens a RecordingStream -- so an operator who set the
documented tesseraql.diagnostics.pinning.enabled on the CLI or host image got a
NoClassDefFoundError while the runtime pools were being built, with no fallback.

Two tokens of YAML. The guard is the rest of this commit, and a re-measurement
replaced all three of its parts.

BYTECODE, NOT IMPORTS. The first design scanned import statements. A file
already in this tree falsifies it: CaptureServer.java declares
`private final com.sun.net.httpserver.HttpServer server;` at :20 and calls
HttpServer.create at :30, all fully qualified, its only imports being four
java.util types. Run as designed against that module the scan returns nothing,
while the truth is jdk.httpserver -- and 354 of the 1021 main sources write some
system class that way. A constant pool has no such blind spot, and this module
already scans compiled classes for the same reason (ModelFieldConsumerScan).

IN THE MAVEN PLUGIN, NOT DOCS-REFERENCE. A bytecode scan needs every sibling's
target/classes. tesseraql-docs-reference builds 27th of 30, ahead of
tesseraql-host, which is one of the two images; tesseraql-maven-plugin builds
30th, which is why YamlSurfaceConsumerGuardTest already lives there. Its reactor
walk lists direct tesseraql-* children rather than walking from "..", so it also
cannot read the six worktrees under .claude/, where a naive walk finds 6110 main
sources instead of 1021.

THE FAILURE DIRECTION WAS GREEN AND IS NOW RED. An index that cannot see the
package, a scan that matches nothing, a workflow with no --add-modules line: all
th